--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Ivan Perez <dev@ivanperez.pe>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+yacs = "^0.1.8"
 
 [tool.poetry.dev-dependencies]
 
